--- a/views/record_body.tt
+++ b/views/record_body.tt
@@ -12,7 +12,7 @@
             [% NEXT IF record.parent_id AND NOT (record.fields.$colid.child_unique) %]
             <th>[% col.name | html_entity %]</th>
             <td class="[% col.type %]">
-                [% render_datum(col, 1) %]
+                [% render_datum(col, 'full') %]
             </td>
         </tr>
     [% END %]
