--- a/views/record_body.tt
+++ b/views/record_body.tt
@@ -10,7 +10,7 @@
         [% colid = col.id %]
         [% NEXT IF record.parent_id AND NOT (record.fields.$colid.child_unique) %]
         [% NEXT IF col.data.dependent_not_shown %]
-        <tr>
+        <tr [% IF col.data.blank %]class="click-to-view-blank-field expandable"[% END %]>
             <th>[% col.name | html_entity %]</th>
             <td class="[% col.type %]">
                 [% render_datum(col, 'full') %]
