--- a/views/edit.tt
+++ b/views/edit.tt
@@ -46,12 +46,15 @@
             <div id="topic[% col.id %]" class="panel-collapse collapse[% IF open %] in[% END %]" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                     [% IF col.topic.need_completed_topics_count %]
-                        <div role="alert" class="alert alert-info">
+                        <div role="alert" class="alert alert-warning">
                             Fields in this section cannot be completed until mandatory fields
                             in the [% col.topic.need_completed_topics_as_string | html %]
                             section[% IF col.topic.need_completed_topics_count > 1 %]s[% END %]
                             have been completed.
                         </div>
+                    [% END %]
+                    [% IF col.topic.description %]
+                        <div role="alert" class="alert alert-info">[% col.topic.description | html %]</div>
                     [% END %]
                 [% IF col.topic.click_to_edit AND record.current_id %]
                     [% click_to_edit = 1 %]
