--- a/views/login.tt
+++ b/views/login.tt
@@ -57,9 +57,11 @@
                         <div class="col-xs-6 col-sm-6 col-md-6">
                             <input type="submit" name="signin" class="btn btn-lg btn-success btn-block" value="Sign In">
                         </div>
-                        <div class="col-xs-6 col-sm-6 col-md-6">
-                            <button type="button" class="btn btn-lg btn-primary btn-block" data-toggle="modal" data-target="#modalregister">Request account</button>
-                        </div>
+                        [% UNLESS site.hide_account_request %]
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <button type="button" class="btn btn-lg btn-primary btn-block" data-toggle="modal" data-target="#modalregister">Request account</button>
+                            </div>
+                        [% END %]
                     </div>
             </form>
             </div>
