Add topic headings into record view

--- a/views/record_body.tt
+++ b/views/record_body.tt
@@ -10,11 +10,15 @@
         [% colid = col.id %]
         [% NEXT IF record.parent_id AND NOT (record.fields.$colid.child_unique) %]
         [% NEXT IF col.data.dependent_not_shown %]
+        [% IF col.topic != last_topic %]
+            <tr><th colspan="2"><h2>[% col.topic OR "Other" | html %]</h2></tr>
+        [% END %]
         <tr [% IF col.data.blank %]class="click-to-view-blank-field expandable"[% END %]>
             <th>[% col.name | html_entity %]</th>
             <td class="[% col.type %]">
                 [% render_datum(col, 'full') %]
             </td>
         </tr>
+        [% last_topic = col.topic %]
     [% END %]
 </table>
