Fix setting of child record field

--- a/views/layout.tt
+++ b/views/layout.tt
@@ -103,7 +103,7 @@
     </div>
    <div class="checkbox stored-value">
         <label>
-            <input type="checkbox" name="can_child" [% IF column.can_child %]checked[% END %]>This field forms a value in child records
+            <input type="checkbox" name="set_can_child" value="1" [% IF column.can_child %]checked[% END %]>This field forms a value in child records
         </label>
     </div>
     <div class="checkbox stored-value">
