--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1317,6 +1317,10 @@ small.search_term {
     position: relative;
 }
 
+.select-widget .available .spinner {
+    padding: 10px;
+}
+
 .select-widget.multi .available .answer li {
     padding-top: .2em;
     padding-bottom: .2em;
