--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -36,7 +36,7 @@
 
 [% MACRO render_person_datum(person) BLOCK %]
     [% IF person %]
-        <button class="btn btn-xs btn-primary trigger" aria-expanded="false">
+        <button class="btn btn-xs btn-primary trigger" aria-expanded="false" type="button">
             [% person.text | html %]
             <span aria-hidden="true" class="glyphicon glyphicon-info-sign"></span>
             <span class="visually-hidden">contact details</span>
