Change curval filter to generic end-point

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -747,7 +747,13 @@
 [% END %]
 
 [% BLOCK singlevalue_column %]
-    <div class="select-widget single" data-field="[% field %]" data-filter-endpoint="[% field == "field9" ? "/api/courses" : "" %]" data-filter-fields='[% field == "field9" ? '["field2", "field4", "field3"]' : "" %]'>
+    <div class="select-widget single"
+        [% IF column.has_subvals %]
+            data-field="[% field %]"
+            data-filter-endpoint="[% "/api/field/values/" _ column.id %]"
+            data-filter-fields='[% column.data_filter_fields %]'
+        [% END %]
+        >
         <div id="[% field %]_label" class="select-widget-label [% required && 'required' %]">[% label %]</div>
         <div class="select-widget-dropdown">
             <div class="form-group form-control" >
