Add blank values, details button and mutli select support to filtered dropdown

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1943,7 +1943,11 @@ small.search_term {
   margin-right: .3em; }
 
 .select-widget .available .answer .details {
+  display: none;
   padding: .5em .3em; }
+
+.select-widget .available.with-details .answer .details {
+  display: inline-block; }
 
 .select-widget .available .answer .more-info {
   margin-bottom: 0; }
