--- a/views/edit.tt
+++ b/views/edit.tt
@@ -901,6 +901,9 @@
                         <span hidden class="form-control-search__clear">&times;</span>
                     </li>
                 [% END %]
+                <li class="spinner" hidden>
+                    <i class="fa fa-spinner fa-spin" style="font-size:24px"></i>
+                </li>
             [% FOREACH value IN values %]
                 [% NEXT IF value.deleted %]
                 [% checked = editvalue.id_hash.${value.id} %]
