--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1364,7 +1364,12 @@ small.search_term {
 }
 
 .select-widget .available .answer .details {
+    display: none;
     padding: .5em .3em;
+}
+
+.select-widget .available.with-details .answer .details {
+    display: inline-block;
 }
 
 .select-widget .available .answer .more-info {
