Implement front-end part of sub-record validations

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1971,5 +1971,9 @@ small.search_term {
 .edit-form {
   margin-bottom: 4em; }
 
+.edit-form--validating .spinner {
+  display: block;
+  font-style: italic; }
+
 .input_holder .datepicker {
   padding-left: 1em; }
