--- a/views/edit.tt
+++ b/views/edit.tt
@@ -92,7 +92,7 @@
     </div>
 [% END %]
 
-<form class="edit-form" method="post" enctype="multipart/form-data"
+<form class="edit-form" method="post" enctype="multipart/form-data" action="/..."
     [% IF modal %]
         data-curval-id="[% modal %]"
         data-current-id="[% record.current_id %]"
@@ -100,6 +100,9 @@
         data-instance-id="[% oi %]"
     [% END %]
 >
+    [% IF modal %]
+        <p role="alert" class="alert alert-danger" hidden></p>
+    [% END %]
     <div class="row">
         <div class="[% IF modal %]col-md-12[% ELSE %]col-md-6[% END %]">
             [% IF record.current_id %]
@@ -136,6 +139,9 @@
         </div>
     </div>
     [% IF modal %]
+        <p class="spinner" hidden>
+            Validating... <i class="fa fa-spinner fa-spin" style="font-size:24px"></i>
+        </p>
         <button type="submit" class="btn btn-primary" id="curval-add">[% IF record.current_id %]Update[% ELSE %]Add[% END %]</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
     [% ELSE %]
@@ -250,6 +256,30 @@
                 e.preventDefault();
                 var form = $(this);
                 var form_data = form.serialize();
+
+                form.addClass('edit-form--validating');
+                form.find(".alert").attr('hidden', '');
+
+                $.post(form.attr("action"), form_data, function(data) {
+                    if (data.error === 0) {
+                        curvalModalValidationSucceeded(form);
+                    } else {
+                        var errorMessage = data.error === 1 ? data.message : "Oops! Something went wrong.";
+                        curvalModalValidationFailed(form, errorMessage);
+                    }
+                }, "json")
+                .fail(function(jqXHR) {
+                    var data = jqXHR.responseJSON;
+                    var errorMessage = data && data.error === 1 ? data.message : "Oops! Something went wrong.";
+                    curvalModalValidationFailed(form, errorMessage);
+                })
+                .always(function() {
+                    form.removeClass('edit-form--validating');
+                });
+            });
+
+            var curvalModalValidationSucceeded = function(form) {
+                var form_data = form.serialize();
                 var modal_field_ids = form.data("modal-field-ids");
                 var col_id = form.data( "curval-id" );
                 var instance_id = form.data( "instance-id" );
@@ -276,7 +306,11 @@
                         .append(ct).append(links).append(hidden_input));
                 }
                 $('.modal.in').modal('hide');
-            });
+            };
+
+            var curvalModalValidationFailed = function(form, errorMessage) {
+                form.find(".alert").text(errorMessage).removeAttr('hidden');
+            };
 
             $(".curval_group").on('click', '.curval_remove', function() {
                 $(this).closest('.curval_item').remove();
