--- a/views/edit.tt
+++ b/views/edit.tt
@@ -312,6 +312,7 @@
             var curvalModalValidationFailed = function(form, errorMessage) {
                 form.find(".alert").text(errorMessage).removeAttr('hidden');
                 form.parents(".modal-content").get(0).scrollIntoView();
+                form.find('button[type=submit]').prop('disabled', false);
             };
 
             $(".curval_group").on('click', '.curval_remove', function() {
