--- a/views/edit.tt
+++ b/views/edit.tt
@@ -218,7 +218,7 @@
                 var record_id = $(e.target).data('record-id');
                 var m = $("#readmore_modal");
                 m.find('.modal-body').text('Loading...');
-                m.find('.modal-body').load('/record_body/' + record_id + '?oi=2');
+                m.find('.modal-body').load('/record_body/' + record_id);
                 m.modal();
             });
 
