Fix some timeline items not being retrieved
I think this is the right fix, but I am not sure why the addition and
subtraction of one day was in the code in the first place. From what I
can tell, the min and max range of the current items is retrieved, so
therefore any new items should be up to but not including those dates.
There should be no need for further adjustment as was the case, as this
was missing items with single day date ranges.

--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -234,11 +234,11 @@
                 }
                 if (props.start < have_range.min) {
                     var from = props.start.getTime();
-                    var to = have_range.min.getTime() - 86400000;
+                    var to = have_range.min.getTime();
                     load_items(from, to, "to");
                 }
                 if (props.end > have_range.max) {
-                    var from = have_range.max.getTime() + 86400000;
+                    var from = have_range.max.getTime();
                     var to = props.end.getTime();
                     load_items(from, to, "from");
                 }
